# MarmoPose

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  run_all.py  run_realtime.py  test_run.py
configs/: default.yaml  double.yaml  family.yaml  realtime.yaml  single.yaml
examples/: calibrate.ipynb  demo_family.ipynb  demo_family_subset.ipynb  demo_pair.ipynb  demo_single.ipynb  family.ipynb  family_blue_green.ipynb  family_subset.ipynb  pair.ipynb  realtime.py  single.ipynb
marmopose/: calibrate.py  cameras.py  config.py  evaluate.py  filter.py  predict.py  triangulate.py  version.py  visualize_2d.py  visualize_3d.py  visualize_combined.py
marmopose/calibration/: boards.py  calibration copy.py  calibration.py  cameras.py
marmopose/config/: config_double_marmoset.toml  config_double_marmoset_id.toml  config_single_marmoset.toml
marmopose/evaluation/: metrics.py  metrics_computation.py
marmopose/processing/: autoencoder.py  filter.py  optimization.py  prediction.py  triangulation.py
marmopose/realtime/: control.py  controller.py  data_processor.py  main.py  predictor.py  processor.py
marmopose/utils/: common.py  config.py  constants.py  coordinates.py  coordinates_setter.py  data_io.py  helpers.py  io.py  plots.py
marmopose/visualization/: display_2d.py  display_3d.py  display_combined.py
tests/: filter_2d.py  realtime_scale.py  run_all.ipynb  video_converter.py
tools/: marmoset.py  realtime_synchronized_record.py  sleap2coco.py  train.py  video_converter.py
tools/train_config/: detection_config.py  pose_config.py
